# ADTPP

./: .gitignore  CMakeLists.txt  Config.cmake  Licence.txt  README.md  adt-add.sh
include/ADTPP/: ADTTypedef.hpp
include/ADTPP/Array/: Array.hpp
include/ADTPP/LinkedList/: LinkedList.hpp
include/ADTPP/Stack/: Stack.hpp
src/Array/: Array.cpp  CMakeLists.txt
src/LinkedList/: CMakeLists.txt  LinkedList.cpp
src/Stack/: CMakeLists.txt  Stack.cpp
tests/: ADTPPTest.hpp
tests/Array/: ArrayTest.cpp  CMakeLists.txt
tests/LinkedList/: CMakeLists.txt  LinkedListTest.cpp
tests/Stack/: CMakeLists.txt  StackTest.cpp
